# DNN-for-intelligent-breast-tumor-detection-or-skin-tumor-detection

./: .gitignore  CST_sim_spec.md  README.md  environment.yml  pyproject.toml  requirements.txt
assets/: meta_atom_lut_example.csv
configs/: default.yaml  emnist_letters.yaml  emnist_letters_32.yaml
data/: README.md
outputs/: README.md
scripts/: generate_cst_detector_macro.py  generate_cst_macro.py  generate_cst_params.py  generate_cst_source_macro.py
src/metasurface_dnn/: __init__.py  __main__.py  data.py  export_meta_atoms.py  model.py  phase_to_thickness.py  physics.py  predict.py  prepare_dataset.py  prepare_emnist.py  simulate.py  train.py  utils.py
src/metasurface_dnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
